fixed nav/login bttns spacing

--- a/css/site.css
+++ b/css/site.css
@@ -1527,15 +1527,17 @@ form {
       float: right;
       margin-top: 2.25rem; }
     .site-header .site-nav {
-      -webkit-transition: max-height 0.4s;
-      -moz-transition: max-height 0.4s;
-      transition: max-height 0.4s;
+      -webkit-transition: max-height 0.3s, margin 0.5s;
+      -moz-transition: max-height 0.3s, margin 0.5s;
+      transition: max-height 0.3s, margin 0.5s;
       clear: both;
       max-height: 0;
       overflow: hidden;
-      margin: 0; }
+      margin: 0;
+      background: rgba(26, 33, 31, 0.5); }
       .site-header .site-nav.open {
-        max-height: 7em; }
+        max-height: 7em;
+        margin-bottom: 1rem; }
       .site-header .site-nav a {
         display: block;
         text-align: left;
